objects/Location_List__c/Location_List__c.object-meta.xml
<CustomObject>
    <label>Location List</label>
    <nameField>
        <label>Location List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>