objects/Location_List__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>