objects/Location_List__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>