objects/Location_List__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email To</label>
    <type>Email</type>
</CustomField>