objects/Location_List__c/fields/Location_List_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Location_List_Email_To__c</fullName>
    <description>Location List Email To and when this is populated and the location list saved, get it to email the location list as a PDF.</description>
    <label>Location List Email To</label>
    <type>Email</type>
</CustomField>