objects/Location_List__c/fields/Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Location Lists</relationshipLabel>
    <relationshipName>Location_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>