objects/Location_List__c/fields/Site_contract__c.field-meta.xml
<CustomField>
    <fullName>Site_contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>please can you link the location list to the Site Contract</description>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>Location Lists</relationshipLabel>
    <relationshipName>Location_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>