objects/Location_List__c/fields/Types_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Service__c</fullName>
    <label>Type of Visit</label>
    <length>75</length>
    <type>Text</type>
</CustomField>