objects/Location_List__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>