objects/Location_List__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>